// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bullet > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_disabled_true__1k0b4m11 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > renders correctly with a text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > renders correctly with an icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_2__1k0b4m1h"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          MoonIcon
        </title>
        <path
          d="M14.954 10.678c.213-.477-.36-.882-.84-.674a6.17 6.17 0 0 1-8.119-8.119c.21-.479-.197-1.052-.673-.84a7.294 7.294 0 1 0 9.632 9.633"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > renders correctly with an icon and icon variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_2__1k0b4m1h"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          MoonOutlineIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M6.132 1.18c.176.175.228.44.133.67a6.029 6.029 0 0 0 7.886 7.886.613.613 0 0 1 .802.801A7.257 7.257 0 0 1 1 7.745a7.26 7.26 0 0 1 4.463-6.698.61.61 0 0 1 .67.133M4.69 2.883a6.029 6.029 0 1 0 8.427 8.427A7.255 7.255 0 0 1 4.69 2.883"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_4__1k0b4m1j"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_6__1k0b4m1l"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_0__1k0b4m1f"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_1__1k0b4m1g"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_3__1k0b4m1i"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > sentiment > render warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_5__1k0b4m1k"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > size > render medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_medium__1k0b4m1b styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > size > render small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > size > render xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_xsmall__1k0b4m1d styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`bullet > size > render xxsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_xxsmall__1k0b4m1e styles_undefined_compound_2__1k0b4m1h"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;
